--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Excel Find and Replace</title>
     <meta charset="utf-8">
-    <script src="../Replace_excel/jquery-1.10.2.min.js"></script>
-    <script src="../Replace_excel/scripts.js"></script>
+    <script src="jquery-1.10.2.min.js"></script>
+    <script src="scripts.js"></script>
     <script>
       function replace_all() {
         var input = $("#text-input").val()
